Added rescan for new files that match the glob pattern
A file limit has also been added.

--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -53,6 +53,9 @@ logcollector.vcheck_files=64
 # Logcollector - Maximum number of lines read from the same file
 logcollector.max_lines=10000
 
+# Logcollector - Maximum number of files to be monitored
+logcollector.max_files=100
+
 # Remoted counter io flush.
 remoted.recv_counter_flush=128
 
